Fix border overlapped problem btw left and rightBar menu

--- a/src/main/css/MenuBar.css
+++ b/src/main/css/MenuBar.css
@@ -5,6 +5,7 @@
   border-bottom: 2px solid black;
 
   display: flex;
+  border-collapse: collapse;
 
   font-family: "Times New Roman", Times, serif;
   font-weight: bold;
@@ -71,6 +72,10 @@
 
   display: flex;
   align-items: center;
+}
+
+.category {
+  padding: 2.2px 0px;
 }
 
 .search {
